--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ts-loader": "^1.3.3"
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "ts-loader": "^1.3.3",
+    "webpack": "^1.14.0"
   }
 }
