--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "aromatic",
   "version": "0.0.1",
   "description": "",
-  "main": "src/Aromatic.js",
+  "main": "src/Aromatic.ts",
   "scripts": {
-    "tsc_amd": "tsc --module es6 index.ts"
+    "test": "mocha",
+    "test_build": "tsc test/*Test.ts",
+    "prepublish": "typings install"
   },
   "dependencies": {
     "typescript": "^1.8.10"
@@ -15,6 +17,9 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.7",
     "ts-loader": "^1.3.3",
     "webpack": "^1.14.0"
   }
